# cr18_main

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  package.xml
Default/: makefile
Default/src/: subdir.mk
bundle/: MarkerData_0_1_2_3.xml
include/: BlueCoordinates.hpp  ControllerCommands.hpp  Coordinates.hpp  RedCoordinates.hpp
launch/: ar_demo.launch  cr_auto.launch  cr_manual.launch  cr_manual_assisted_red.launch  cr_semiauto.launch  cr_semiauto_2v0.launch  cr_semiauto_blue.launch  cr_semiauto_red.launch  tr_auto.launch  tr_auto_1v2.launch  tr_auto_2v0.launch  tr_demo_amcl.launch  tr_demo_auto.launch  tr_demo_gmapping.launch  tr_launcher_unitTest.launch  tr_manual.launch
map/: cr18_full.xcf  cr18_full.yaml
param/: crude_planner.yaml  joy_assign_wired.yaml  joy_assign_wireless.yaml  useless_planner_params.yaml
src/: cr_can.cpp  cr_main_auto.cpp  cr_main_joy.cpp  cr_main_joy_assisted.cpp  cr_main_semiauto.cpp  cr_main_semiauto_2v0.cpp  tr_can.cpp  tr_launcher_unitTest.cpp  tr_main_auto_1v.cpp  tr_main_auto_1v1.cpp  tr_main_auto_1v2.cpp  tr_main_auto_2v0.cpp  tr_main_joy.cpp  usb_can_node.cpp
